// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros correct usage 1: correct usage 1 1`] = `

import tw from '../lib/macro';
const css = tw("dark:bg-black bg-gradient-to-r sm:motion-reduce:translate-y-0 motion-reduce:hover:translate-y-0 md:motion-reduce:hover:translate-y-0");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  backgroundImage: "linear-gradient(to right, var(--gradient-color-stops))",
  "@media (min-width: 640px)": {
    "@media (prefers-reduced-motion: reduce)": {
      "--transform-translate-y": "0",
    },
  },
  "@media (min-width: 1024px)": {
    "@media (prefers-reduced-motion: reduce)": {
      "&:hover": {
        "--transform-translate-y": "0",
      },
    },
  },
  "@media (prefers-color-scheme: dark)": {
    "--bg-opacity": "1",
    backgroundColor: ["#000000", "rgba(0, 0, 0, var(--bg-opacity))"],
  },
  "@media (prefers-reduced-motion: reduce)": {
    "&:hover": {
      "--transform-translate-y": "0",
    },
  },
};


`;

exports[`macros correct usage 2: correct usage 2 1`] = `

import tw from '../lib/macro';
const css = tw\`bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-300 transition duration-150 ease-in-out\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "--bg-opacity": "1",
  backgroundColor: ["#5850ec", "rgba(88, 80, 236, var(--bg-opacity))"],
  transitionProperty:
    "background-color, border-color, color, fill, stroke, opacity, box-shadow, transform",
  transitionDuration: "150ms",
  transitionTimingFunction: "cubic-bezier(0.4, 0, 0.2, 1)",
  "&:hover": {
    "--bg-opacity": "1",
    backgroundColor: ["#6875f5", "rgba(104, 117, 245, var(--bg-opacity))"],
  },
  "&:focus": {
    "--border-opacity": "1",
    outline: "0",
    borderColor: ["#5145cd", "rgba(81, 69, 205, var(--border-opacity))"],
    boxShadow: "0 0 0 3px rgba(180, 198, 252, 0.45)",
  },
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#b4c6fc", "rgba(180, 198, 252, var(--bg-opacity))"],
  },
};


`;

exports[`macros no usage: no usage 1`] = `

import tw from '../lib/macro'

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros tailwind-ui ussage: tailwind-ui ussage 1`] = `

import tw from '../lib/macro';
const css = tw\`active:bg-indigo-300\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "&:active": {
    "--bg-opacity": "1",
    backgroundColor: ["#b4c6fc", "rgba(180, 198, 252, var(--bg-opacity))"],
  },
};


`;
